--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UFT-8">
 <link rel="stylesheet" type="text/css" href="/geniushour/css/main.css">
-<script type="text/javascript" src="/geniushour/js/jquery-3.1.1.js"></script>
+<script type="text/javascript" src="/geniushour/js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="/geniushour/js/main.js"></script>
 <title></title>
 </head>
