--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UFT-8">
-<link rel="stylesheet" type="text/css" href="/geniushour/css/main.css">
-<script type="text/javascript" src="/geniushour/js/jquery-3.1.1.min.js"></script>
-<script type="text/javascript" src="/geniushour/js/main.js"></script>
-<title></title>
-</head>
+  <meta charset="UFT-8">
+  <link rel="stylesheet" type="text/css" href="/geniushour/css/main.css">
+  <script type="text/javascript" src="/geniushour/js/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="/geniushour/js/main.js"></script>
+  <title></title>
+  </head>
 <body>
-
+  <nav>
+    <a>Intro</a>
+    <a>Processing</a>
+    <a>Memory</a>
+    <a>Storage</a>
+    <a>I/O</a>
+    <a>Data</a>
+  </nav>
 </body>
 </html>
