--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
   </head>
 <body>
   <nav>
-    <a>Intro</a>
-    <a>Processing</a>
-    <a>Memory</a>
-    <a>Storage</a>
-    <a>I/O</a>
-    <a>Data</a>
+    <a id="intro_anchor">Intro</a>
+    <a id="processing_anchor">Processing</a>
+    <a id="memory_anchor">Memory</a>
+    <a id="storage_anchor">Storage</a>
+    <a id="inputoutput_anchor">I/O</a>
+    <a id="data_anchor">Data</a>
   </nav>
+  <article></article>
+  <article></article>
+  <article></article>
+  <article></article>
+  <article></article>
+  <article></article>
+  <article></article>
 </body>
 </html>
