--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
   </head>
 <body>
   <nav>
-    <a id="intro_anchor">Intro</a>
-    <a id="processing_anchor">Processing</a>
-    <a id="memory_anchor">Memory</a>
-    <a id="storage_anchor">Storage</a>
-    <a id="inputoutput_anchor">I/O</a>
-    <a id="data_anchor">Data</a>
+    <a href="#intro">Introduction</a>
+    <a href="#processing">Processing</a>
+    <a href="#memory">Memory</a>
+    <a href="#storage">Storage</a>
+    <a href="#IO">I/O</a>
+    <a href="#data">Data</a>
+    <a href="#conclusion">Conclusion</a>
+    <a href="#citations">Citations</a>
   </nav>
-  <article></article>
-  <article></article>
-  <article></article>
-  <article></article>
-  <article></article>
-  <article></article>
-  <article></article>
+  <article id="intro"></article>
+  <article id="processing"></article>
+  <article id="memory"></article>
+  <article id="storage"></article>
+  <article id="IO"></article>
+  <article id="data"></article>
+  <article id="conclusion"></article>
+  <article id="citations"></article>
 </body>
 </html>
