--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="#conclusion">Conclusion</a>
     <a href="#citations">Citations</a>
   </nav>
+  <h1>Computer Hardware</h1>
   <article id="intro"></article>
   <article id="processing"></article>
   <article id="memory">Primary storage is the main storage known as RAM that stores the data and programs the CPU tells it to. 
