--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
   <title></title>
   </head>
 <body>
-  <nav>
-    <a href="#intro">Introduction</a>
-    <a href="#processing">Processing</a>
-    <a href="#memory">Memory</a>
-    <a href="#storage">Storage</a>
-    <a href="#IO">I/O</a>
-    <a href="#conclusion">Conclusion</a>
-    <a href="#citations">Citations</a>
-  </nav>
+  <header>
+    <nav>
+      <a href="#intro">Introduction</a>
+      <a href="#processing">Processing</a>
+      <a href="#memory">Memory</a>
+      <a href="#storage">Storage</a>
+      <a href="#IO">I/O</a>
+      <a href="#conclusion">Conclusion</a>
+      <a href="#citations">Citations</a>
+    </nav>
+  </header>
   <h1>Computer Hardware</h1>
   <article id="intro"></article>
   <article id="processing"></article>
-  <article id="memory">Primary storage is the main storage known as RAM that stores the data and programs the CPU tells it to. 
+  <article id="memory">
+    Primary storage is the main storage known as RAM that stores the data and programs the CPU tells it to. 
     The two types of RAM are static and dynamic. 
     Static RAM is quicker but stores less. 
     Dynamic RAM stores more but is slower. 
@@ -30,7 +33,8 @@
     This process is called von Neumann architecture.  
     John von Neumann was part of the team to create the first electronic computer and he is the one who came up with the von Neumann architecture. 
   </article>
-  <article id="storage">Secondary storage is extra storage for a computer that is not volatile. 
+  <article id="storage">
+    Secondary storage is not volitile, and the place where files and non-running programs are stored for a computer. 
     The secondary storage types are magnetic, optical, and integrated circuit. 
     Magnetic storage includes hard disks and floppy disks. 
     Hard disks are divided into multiple platters that take shape of a concentric circle which are divided into equal sections that make up a disk block. 
