--- a/index.html
+++ b/index.html
@@ -19,33 +19,35 @@
       <a href="#citations">Citations</a>
     </nav>
   </header>
-  <h1>Computer Hardware</h1>
-  <article id="intro"></article>
-  <article id="processing"></article>
-  <article id="memory">
-    Primary storage is the main storage known as RAM that stores the data and programs the CPU tells it to. 
-    The two types of RAM are static and dynamic. 
-    Static RAM is quicker but stores less. 
-    Dynamic RAM stores more but is slower. 
-    RAM is volatile which means it needs to be constantly re-energized otherwise it will lose all information. 
-    This means that primary storage stores information used by only running programs as long as the computer is on. 
-    The programs take up secondary storage when they are used or when the computer is shutdown. 
-    This process is called von Neumann architecture.  
-    John von Neumann was part of the team to create the first electronic computer and he is the one who came up with the von Neumann architecture. 
-  </article>
-  <article id="storage">
-    Secondary storage is not volitile, and the place where files and non-running programs are stored for a computer. 
-    The secondary storage types are magnetic, optical, and integrated circuit. 
-    Magnetic storage includes hard disks and floppy disks. 
-    Hard disks are divided into multiple platters that take shape of a concentric circle which are divided into equal sections that make up a disk block. 
-    Data is written and read in many blocks called clusters. 
-    Optical storage is CDs and DVDs. 
-    CDs and DVDs both have one track in the shape of a spiral. 
-    CDs and DVDs are read from the inside to the outside. Integrated circuit (IC) storage consists of USB sticks, SD cards and hard drives. 
-    IC storage can read and write data faster because it is static and does not move. 
-    IC storage can break down after thousands to hundreds of thousands of use in transferring data.</article>
-  <article id="IO"></article>
-  <article id="conclusion"></article>
-  <article id="citations"></article>
+  <main>
+    <h1>Computer Hardware</h1>
+    <article id="intro"></article>
+    <article id="processing"></article>
+    <article id="memory">
+      Primary storage is the main storage known as RAM that stores the data and programs the CPU tells it to. 
+      The two types of RAM are static and dynamic. 
+      Static RAM is quicker but stores less. 
+      Dynamic RAM stores more but is slower. 
+      RAM is volatile which means it needs to be constantly re-energized otherwise it will lose all information. 
+      This means that primary storage stores information used by only running programs as long as the computer is on. 
+      The programs take up secondary storage when they are used or when the computer is shutdown. 
+      This process is called von Neumann architecture.  
+      John von Neumann was part of the team to create the first electronic computer and he is the one who came up with the von Neumann architecture. 
+    </article>
+    <article id="storage">
+      Secondary storage is not volitile, and the place where files and non-running programs are stored for a computer. 
+      The secondary storage types are magnetic, optical, and integrated circuit. 
+      Magnetic storage includes hard disks and floppy disks. 
+      Hard disks are divided into multiple platters that take shape of a concentric circle which are divided into equal sections that make up a disk block. 
+      Data is written and read in many blocks called clusters. 
+      Optical storage is CDs and DVDs. 
+      CDs and DVDs both have one track in the shape of a spiral. 
+      CDs and DVDs are read from the inside to the outside. Integrated circuit (IC) storage consists of USB sticks, SD cards and hard drives. 
+      IC storage can read and write data faster because it is static and does not move. 
+      IC storage can break down after thousands to hundreds of thousands of use in transferring data.</article>
+    <article id="IO"></article>
+    <article id="conclusion"></article>
+    <article id="citations"></article>
+  </main>
 </body>
 </html>
