--- a/index.html
+++ b/index.html
@@ -14,15 +14,37 @@
       <a href="#processing">Processing</a>
       <a href="#memory">Memory</a>
       <a href="#storage">Storage</a>
+      <a href="#binary">Binary</a>
       <a href="#IO">I/O</a>
-      <a href="#conclusion">Conclusion</a>
       <a href="#citations">Citations</a>
     </nav>
   </header>
   <main>
     <h1>Computer Hardware</h1>
-    <article id="intro"></article>
-    <article id="processing"></article>
+    <article id="intro">
+      The main components of computer hardware includes processing, memory, secondary storage, input, and output. 
+      The processing unit (Central Processing Unit) runs programs. 
+      The CPU also receives data from input and sends data to output.
+      Input is how the computer gets data received from the user.
+      The mouse and keyboard are some examples.
+      Output is how data is displayed to the user.
+      Some examples include a monitor or a printer.
+      Secondary storage is used to temporarily store programs and other data. 
+      Examples of secondary storage includes disks and USB drives. </article>
+    <article id="processing">
+      The Central Processing Unit is one the most important part to computers. 
+      There are two parts to the CPU which are the control unit, and the math/logic unit. 
+      The control unit is the part of the CPU that executes the programs.
+      The control unit does this by communicating between input and output using buses.
+      Buses are used between all components to communicate data.
+      The user sends in data by executing a program and the computer outputs by running the program and displaying it.
+      The math/logic unit carries out all of the operators for math. 
+      Simple operations are carried out in the math/logic unit like addition, subtraction, multiplication, and division.
+      Logic operators are also carried out in the math/logic unit. 
+      Some examples include greater than/equals/smaller than operators, and the and/or/not gates.
+      All of these operations that are used are temporarily stored(rememberd) in registers which is much faster than processing.
+      The registers are used for efficiency if the computer has to carry out the same operation multiple times.
+    </article>
     <article id="memory">
       Primary storage is the main storage known as RAM that stores the data and programs the CPU tells it to. 
       The two types of RAM are static and dynamic. 
@@ -45,9 +67,36 @@
       CDs and DVDs are read from the inside to the outside. Integrated circuit (IC) storage consists of USB sticks, SD cards and hard drives. 
       IC storage can read and write data faster because it is static and does not move. 
       IC storage can break down after thousands to hundreds of thousands of use in transferring data.</article>
-    <article id="IO"></article>
-    <article id="conclusion"></article>
-    <article id="citations"></article>
+    <article id="binary">
+      Binary represents data on a computer which is a number system of 2.
+      A sequence of binary numbers represents different characters, quantities, or symbols that are used by software.
+      Electricity can run through switches when they are open. 
+      A lower voltage of electricity runs through switches when they are closed.
+      1 represents that a switch should be open and 0 represents that a switch should be closed. </article>
+    <article id="IO">
+    I/O, short for input and output, is how the computer interacts with the user.
+      Input is the devices used to record/gather information from the user. Output is the devices that communicate with the user.
+      There are many examples of input and output. Some of the main input devices include mouses and keyboards.
+      Both of these input devices, if received input, will send data.
+      This data will get sent to memory for the processor to handle.
+      In a keyboard, each key sends in a byte of data (8 binary digits) identifying the key pressed.
+      A mouse will sense if the user moved the mouse by using an LED/Laser and a camera that senses motion when the light reflects of a surface.
+      One of the main output devices is the monitor. The monitor gets binary data on what to display.
+      The images that get displayed are made of tiny little dots known as pixels. 
+    </article>
+    <article id="citations">
+      Introduction to Computers. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading01.htm
+      Data In The Computer. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading02.htm
+      The CPU and Memory. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading04.htm
+      Disks and Secondary Storage. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading05.htm
+      Input and Output(n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading06.htm
+      (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading07.htm
+      Computer & Information Literacy Web Site(n.d.). Retrieved September 04, 2017, from http://www.cs.scranton.edu/~cil102/cil102.html
+      The Arithmetic-Logic Unit. (n.d.). Retrieved September 04, 2017, from https://www.d.umn.edu/~gshute/logic/alu.xhtml
+      The Components of the System Unit. (n.d.). Retrieved September 04, 2017, from http://uwf.edu/clemley/cgs1570w/notes/Concepts-4.htm
+      What’s a Bus. (n.d.). Retrieved September 04, 2017, from 
+      https://www.cs.umd.edu/class/sum2003/cmsc311/Notes/CompOrg/bus.html
+    </article>
   </main>
 </body>
 </html>
