--- a/index.html
+++ b/index.html
@@ -22,16 +22,21 @@
   <main>
     <h1>Computer Hardware</h1>
     <article id="intro">
-      The main components of computer hardware includes processing, memory, secondary storage, input, and output. 
+      <h2>Intro</h2>
+      The main components of computer hardware includes processing, memory, input/output, and secondary storage. 
       The processing unit (Central Processing Unit) runs programs. 
       The CPU also receives data from input and sends data to output.
+      Memory is used to store programs that are running.
+      Memory will lose all of it's information if the power is shut off.
       Input is how the computer gets data received from the user.
       The mouse and keyboard are some examples.
       Output is how data is displayed to the user.
       Some examples include a monitor or a printer.
+      
       Secondary storage is used to temporarily store programs and other data. 
       Examples of secondary storage includes disks and USB drives. </article>
     <article id="processing">
+      <h2>Processing</h2>
       The Central Processing Unit is one the most important part to computers. 
       There are two parts to the CPU which are the control unit, and the math/logic unit. 
       The control unit is the part of the CPU that executes the programs.
@@ -46,7 +51,8 @@
       The registers are used for efficiency if the computer has to carry out the same operation multiple times.
     </article>
     <article id="memory">
-      Primary storage is the main storage known as RAM that stores the data and programs the CPU tells it to. 
+      <h2>Primary Storage</h2>
+      Primary storage (memory) is the main storage known as RAM that stores the data and programs the CPU tells it to. 
       The two types of RAM are static and dynamic. 
       Static RAM is quicker but stores less. 
       Dynamic RAM stores more but is slower. 
@@ -57,7 +63,8 @@
       John von Neumann was part of the team to create the first electronic computer and he is the one who came up with the von Neumann architecture. 
     </article>
     <article id="storage">
-      Secondary storage is not volitile, and the place where files and non-running programs are stored for a computer. 
+      <h2>Secondary Storage</h2>
+      Secondary storage (storage) is not volitile, and the place where files and non-running programs are stored for a computer. 
       The secondary storage types are magnetic, optical, and integrated circuit. 
       Magnetic storage includes hard disks and floppy disks. 
       Hard disks are divided into multiple platters that take shape of a concentric circle which are divided into equal sections that make up a disk block. 
@@ -68,13 +75,15 @@
       IC storage can read and write data faster because it is static and does not move. 
       IC storage can break down after thousands to hundreds of thousands of use in transferring data.</article>
     <article id="binary">
+      <h2>Binary</h2>
       Binary represents data on a computer which is a number system of 2.
       A sequence of binary numbers represents different characters, quantities, or symbols that are used by software.
       Electricity can run through switches when they are open. 
       A lower voltage of electricity runs through switches when they are closed.
       1 represents that a switch should be open and 0 represents that a switch should be closed. </article>
     <article id="IO">
-    I/O, short for input and output, is how the computer interacts with the user.
+      <h2>Input and Output</h2>
+      I/O, short for input and output, is how the computer interacts with the user.
       Input is the devices used to record/gather information from the user. Output is the devices that communicate with the user.
       There are many examples of input and output. Some of the main input devices include mouses and keyboards.
       Both of these input devices, if received input, will send data.
@@ -85,17 +94,20 @@
       The images that get displayed are made of tiny little dots known as pixels. 
     </article>
     <article id="citations">
-      Introduction to Computers. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading01.htm
-      Data In The Computer. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading02.htm
-      The CPU and Memory. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading04.htm
-      Disks and Secondary Storage. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading05.htm
-      Input and Output(n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading06.htm
-      (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading07.htm
-      Computer & Information Literacy Web Site(n.d.). Retrieved September 04, 2017, from http://www.cs.scranton.edu/~cil102/cil102.html
-      The Arithmetic-Logic Unit. (n.d.). Retrieved September 04, 2017, from https://www.d.umn.edu/~gshute/logic/alu.xhtml
-      The Components of the System Unit. (n.d.). Retrieved September 04, 2017, from http://uwf.edu/clemley/cgs1570w/notes/Concepts-4.htm
-      What’s a Bus. (n.d.). Retrieved September 04, 2017, from 
-      https://www.cs.umd.edu/class/sum2003/cmsc311/Notes/CompOrg/bus.html
+      <h2>Citations</h2>
+      <div id="apa">
+        Introduction to Computers. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading01.htm
+        Data In The Computer. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading02.htm
+        The CPU and Memory. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading04.htm
+        Disks and Secondary Storage. (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading05.htm
+        Input and Output(n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading06.htm
+        (n.d.). Retrieved September 01, 2017, from http://homepage.cs.uri.edu/faculty/wolfe/book/Readings/Reading07.htm
+        Computer & Information Literacy Web Site(n.d.). Retrieved September 04, 2017, from http://www.cs.scranton.edu/~cil102/cil102.html
+        The Arithmetic-Logic Unit. (n.d.). Retrieved September 04, 2017, from https://www.d.umn.edu/~gshute/logic/alu.xhtml
+        The Components of the System Unit. (n.d.). Retrieved September 04, 2017, from http://uwf.edu/clemley/cgs1570w/notes/Concepts-4.htm
+        What’s a Bus. (n.d.). Retrieved September 04, 2017, from 
+        https://www.cs.umd.edu/class/sum2003/cmsc311/Notes/CompOrg/bus.html
+      </div>
     </article>
   </main>
 </body>
