--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="/geniushour/css/main.css">
   <script type="text/javascript" src="/geniushour/js/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="/geniushour/js/main.js"></script>
-  <title></title>
+  <title>Computer Hardware</title>
   </head>
 <body>
   <header>
