--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
       This means that primary storage stores information used by only running programs as long as the computer is on. 
       The programs take up secondary storage when they are used or when the computer is shutdown. 
       This process is called von Neumann architecture.  
-      John von Neumann was part of the team to create the first electronic computer and he is the one who came up with the von Neumann architecture. 
+      John von Neumann was part of the team to create the first electronic computer called the ENIAC, and he is the one who came up with the von Neumann architecture.
+      <img src="eniac.jpg" style="float:right">
     </article>
     <article id="storage">
       <h2>Secondary Storage</h2>
