--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       One of the main output devices is the monitor. The monitor gets binary data on what to display.
       The images that get displayed are made of tiny little dots known as pixels. 
     </article>
+    <img src="computer diagram.gif">
     <article id="citations">
       <h2>Citations</h2>
       <div id="apa">
