--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </article>
     <article id="memory">
       <h2>Primary Storage</h2>
-      <img src="eniac.jpg" style="float:right">
+      <img src="eniac.jpg" style="float:right;">
       Primary storage (memory) is the main storage known as RAM that stores the data and programs the CPU tells it to. 
       The two types of RAM are static and dynamic. 
       Static RAM is quicker but stores less. 
@@ -95,7 +95,7 @@
       One of the main output devices is the monitor. The monitor gets binary data on what to display.
       The images that get displayed are made of tiny little dots known as pixels. 
     </article>
-    <img id="diagram" src="computer diagram.gif">
+    <img id="diagram" src="computer diagram.gif" style="width:100%; height:80%;">
     <article id="citations">
       <h2>Citations</h2>
       <div id="apa">
