--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
       One of the main output devices is the monitor. The monitor gets binary data on what to display.
       The images that get displayed are made of tiny little dots known as pixels. 
     </article>
-    <img id="diagram" src="computer diagram.gif" style="width:100%; height:80%;">
+    <article id="diagram">
+      <h1>Diagram</h1>
+      <img src="computer diagram.gif" style="width:100%; height:80%;">
+    </article>
     <article id="citations">
       <h2>Citations</h2>
       <div id="apa">
