--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       One of the main output devices is the monitor. The monitor gets binary data on what to display.
       The images that get displayed are made of tiny little dots known as pixels. 
     </article>
-    <article id="diagram">
+    <article id="Diagram">
       <h1>Diagram</h1>
       <img src="computer diagram.gif" style="width:100%; height:80%;">
     </article>
