--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <main>
-    <h1>Computer Hardware</h1>
+    <h1 id="title">Computer Hardware</h1>
     <article id="intro">
       <h2>Intro</h2>
       The main components of computer hardware includes processing, memory, input/output, and secondary storage. 
