--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </article>
     <article id="storage">
       <h2>Secondary Storage</h2>
+      <img src="floppydisk.jpg" style="float:right;">
       Secondary storage (storage) is not volitile, and the place where files and non-running programs are stored for a computer. 
       The secondary storage types are magnetic, optical, and integrated circuit. 
       Magnetic storage includes hard disks and floppy disks. 
@@ -75,7 +76,8 @@
       CDs and DVDs both have one track in the shape of a spiral. 
       CDs and DVDs are read from the inside to the outside. Integrated circuit (IC) storage consists of USB sticks, SD cards and hard drives. 
       IC storage can read and write data faster because it is static and does not move. 
-      IC storage can break down after thousands to hundreds of thousands of use in transferring data.</article>
+      IC storage can break down after thousands to hundreds of thousands of use in transferring data.
+    </article>
     <article id="binary">
       <h2>Binary</h2>
       Binary represents data on a computer which is a number system of 2.
