--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
       Input is how the computer gets data received from the user.
       The mouse and keyboard are some examples.
       Output is how data is displayed to the user.
-      Some examples include a monitor or a printer.
-      
-      Secondary storage is used to temporarily store programs and other data. 
+      Some examples include a monitor or a printer.     
+      Secondary storage perminately stores programs and other data. 
       Examples of secondary storage includes disks and USB drives. </article>
     <article id="processing">
       <h2>Processing</h2>
