--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       Simple operations are carried out in the math/logic unit like addition, subtraction, multiplication, and division.
       Logic operators are also carried out in the math/logic unit. 
       Some examples include greater than/equals/smaller than operators, and the and/or/not gates.
-      All of these operations that are used are temporarily stored(rememberd) in registers which is much faster than processing.
+      All of the operations that are used are temporarily stored(rememberd) in registers which is much faster than processing.
       The registers are used for efficiency if the computer has to carry out the same operation multiple times.
     </article>
     <article id="memory">
       <h2>Primary Storage</h2>
       <img src="eniac.jpg" style="float:right;">
-      Primary storage (memory) is the main storage known as RAM that stores the data and programs the CPU tells it to. 
+      Primary storage (memory) is the main storage known as RAM (Random Access Memory) that stores the data and programs the CPU tells it to. 
       The two types of RAM are static and dynamic. 
       Static RAM is quicker but stores less. 
       Dynamic RAM stores more but is slower. 
@@ -69,11 +69,12 @@
       Secondary storage (storage) is not volitile, and the place where files and non-running programs are stored for a computer. 
       The secondary storage types are magnetic, optical, and integrated circuit. 
       Magnetic storage includes hard disks and floppy disks. 
-      Hard disks are divided into multiple platters that take shape of a concentric circle which are divided into equal sections that make up a disk block. 
+      Hard disks are divided into multiple platters that take shape of a concentric circle (circles inside of circles) which are divided into equal sections that make up a disk block. 
       Data is written and read in many blocks called clusters. 
-      Optical storage is CDs and DVDs. 
+      Optical storage is mainly CDs and DVDs. 
       CDs and DVDs both have one track in the shape of a spiral. 
-      CDs and DVDs are read from the inside to the outside. Integrated circuit (IC) storage consists of USB sticks, SD cards and hard drives. 
+      CDs and DVDs are read from the inside to the outside, the opposite direction of a record. 
+      Integrated circuit (IC) storage consists of USB sticks, SD cards and hard drives. 
       IC storage can read and write data faster because it is static and does not move. 
       IC storage can break down after thousands to hundreds of thousands of use in transferring data.
     </article>
@@ -81,9 +82,9 @@
       <h2>Binary</h2>
       Binary represents data on a computer which is a number system of 2.
       A sequence of binary numbers represents different characters, quantities, or symbols that are used by software.
-      Electricity can run through switches when they are open. 
-      A lower voltage of electricity runs through switches when they are closed.
-      1 represents that a switch should be open and 0 represents that a switch should be closed. </article>
+      Electricity can run through switches when they are open creating a closed circut. 
+      No voltage runs through switches when they are open, like an open circut.
+      0 represents that a switch that is open and 1 represents that a switch is closed. </article>
     <article id="IO">
       <h2>Input and Output</h2>
       I/O, short for input and output, is how the computer interacts with the user.
