--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       The mouse and keyboard are some examples.
       Output is how data is displayed to the user.
       Some examples include a monitor or a printer.     
-      Secondary storage perminately stores programs and other data. 
+      Secondary storage permanetely stores programs and other data. 
       Examples of secondary storage includes disks and USB drives. </article>
     <article id="processing">
       <h2>Processing</h2>
