--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <article id="storage">
       <h2>Secondary Storage</h2>
       <img src="floppydisk.jpg" style="float:right;">
-      Secondary storage (storage) is not volitile, and the place where files and non-running programs are stored for a computer. 
+      Secondary storage (storage) is not volatile, and the place where files and non-running programs are stored for a computer. 
       The secondary storage types are magnetic, optical, and integrated circuit. 
       Magnetic storage includes hard disks and floppy disks. 
       Hard disks are divided into multiple platters that take shape of a concentric circle (circles inside of circles) which are divided into equal sections that make up a disk block. 
